--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 
 /* body/page constants */
-body { font-size:.8em; margin:0; padding:0; /*overflow-x: hidden;*/ font-family: HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+body { font-size:.8em; margin:0;  /*overflow-x: hidden;*/ font-family: HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
 /*.content { overflow: hidden; }*/
 
 .greenline {
@@ -10,12 +10,25 @@ body { font-size:.8em; margin:0; padding:0; /*overflow-x: hidden;*/ font-family:
 }
 img{
 	display:inline;
-	padding: 10px 10px 100px 10px;
-	size: 150%;
+	padding: 10px 10px 10px 10px;	
 }
 .first-card{
 	padding-left: 138px;
 }
+.player-cards {	
+	border-style: solid; border-width: 1px;  border-color: white;
+}
+
+.board{
+	border-style: solid; border-width: 1px;  border-color: white;
+	
+}
+.board-wrapper{padding: 10px 101px 100px 0px;}
+.wrapper{
+		
+		padding: 1px 252px 100px 138px;
+}
+
 .watermark img{
 	filter:alpha(opacity=90);
 	opacity:.90;
@@ -29,7 +42,7 @@ img{
 .
 .center{text-align: center;}
 .right{float:right;}
-.border{border-style: solid; border-width: 1px;  border-color: white;}
+
 .white-text{color:white;}
 
 .bg-color9,.bg-color9 a{background-color:#01471C} /* footer links part of footer */
